# operating-systems

./: .gitignore  CMakeLists.txt  README.md
src/lib/: CMakeLists.txt  concurrent_matrix.c  concurrent_matrix.h  copy.c  graph.c  graph.h  matrix.c  matrix.h
src/task2/: CMakeLists.txt  copy.c  copy.h  main.c
src/task3/: graph.c  graph.h  main.c
src/task4/: main.c
src/task5/: main.c
src/task6/: main.c
src/task7/: client.c  server.c
